testing ngcloak to avoid ugly flicker, added filewatch on index.json to force reload

--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,8 @@ li {
 	padding: 10px;
 	float: right;
 }
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
